# Find-Commit

./: .flake8  .gitignore  .safety-project.ini  LICENSE  README.md  et --soft c0ea43c^  find_commits.py  pyproject.toml
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_refactor.yml  config.yml  documentation.yml  feature_request.yml  performance.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.yml
.github/workflows/: codeql.yml  tests.yml
docs/: cli-reference.md  forks.md  index.md  installation.md  outputs.md  performance.md  similarity.md  troubleshooting.md  usage.md
docs/development/: architecture.md  testing.md
docs/development/api/: fuzzy.md  git_ops.md  github_api.md  selection.md  utils.md
find_commits_lib/: __init__.py  fuzzy.py  git_ops.py  github_api.py  selection.py  utils.py
find_commits_lib/core/: __init__.py  orchestrate.py
tests/: test_basic_functionality.py  test_clone_modes.py  test_fast_mode.py  test_git_ops.py  test_github_api.py  test_imports.py  test_orchestrate_scoring_and_errors.py  test_progress_timing.py  test_selection.py  test_similarity_modes.py  test_tokenize.py  test_utils_and_fuzzy.py  test_utils_more.py
