[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "find-commits"
version = "0.1.0"
description = "Find Git commits containing a given file's content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CommitMaster102"}]
dependencies = []

[project.urls]
Homepage = "https://example.com"

[project.scripts]
find-commits = "find_commits:main"

