[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "find-commits"
version = "0.1.0"
description = "Find Git commits containing a given file's content"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CommitMaster102"}]
dependencies = []
keywords = ["git", "search", "commits", "similarity", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Git = "https://github.com/CommitMaster102/Find-Commit.git"

[project.scripts]
find-commits = "find_commits:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage[toml]>=7.2",
    "black>=25.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0",
    "bandit[sarif]>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["find_commits_lib*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*.pyc", "__pycache__", ".venv/*", "build/*", "dist/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/__init__.py:F401",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # Skip assert_used test
severity = "medium"
confidence = "medium"